tests/neg/errpos.scala
object Test {
  val x =     // error: expression expected
  val y = 2   // error: ';' expected
}